# nostring

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FOUNDING.md  LICENSE  README.md  RELEASE_KEY.asc  ROADMAP.md  WORKING.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: nostring-server.example.toml
crates/nostring-ccd/: Cargo.toml
crates/nostring-ccd/examples/: ccd_demo.rs
crates/nostring-ccd/src/: blind.rs  fund_vault.rs  integration.rs  lib.rs  musig.rs  transport.rs  types.rs  vault.rs
crates/nostring-core/: Cargo.toml
crates/nostring-core/examples/: testnet_address.rs
crates/nostring-core/src/: crypto.rs  keys.rs  lib.rs  memory.rs  password.rs  seed.rs
crates/nostring-electrum/: Cargo.toml
crates/nostring-electrum/examples/: e2e_testnet.rs
crates/nostring-electrum/src/: lib.rs
crates/nostring-email/: Cargo.toml
crates/nostring-email/src/: contacts.rs  fetch.rs  lib.rs  send.rs
crates/nostring-inherit/: Cargo.toml
crates/nostring-inherit/src/: backup.rs  checkin.rs  heartbeat.rs  heir.rs  lib.rs  policy.rs  taproot.rs  taproot_checkin.rs  test_utils.rs
crates/nostring-inherit/tests/: e2e_lifecycle.rs
crates/nostring-messaging/: Cargo.toml
crates/nostring-messaging/src/: ccd.rs  groups.rs  lib.rs  persistent.rs  relay.rs
crates/nostring-notify/: Cargo.toml
crates/nostring-notify/src/: config.rs  lib.rs  nostr_dm.rs  nostr_relay.rs  smtp.rs  templates.rs
crates/nostring-notify/tests/: nip17_relay.rs
crates/nostring-server/: Cargo.toml
crates/nostring-server/src/: config.rs  daemon.rs  main.rs
crates/nostring-shamir/: Cargo.toml
crates/nostring-shamir/src/: codex32.rs  gf256.rs  lib.rs  rs1024.rs  shamir.rs  shares.rs  slip39.rs  wordlist.rs
crates/nostring-watch/: Cargo.toml
crates/nostring-watch/src/: events.rs  lib.rs  spend_analysis.rs  state.rs
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CLAIM_GUIDE.md  DEMO_WRITEUP.md  EMAIL_TEST_RESULTS.md  FUZZING_RESULTS.md  HEIR_GUIDE.md  INTEGRATION_TEST_RESULTS.md  INTEGRATION_TEST_RESULTS_2.md  INTEGRATION_TEST_RESULTS_3.md  LAUNCH_PLAN.md  MASTER_PLAN.md  NOSTR_INHERITANCE.md  OPERATIONS.md  PHASE5_PLAN.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SELF_HOSTING.md  TESTNET_CHECKIN_RESULTS.md  THREAT_MODEL.md  cascade_demo_results.json
docs/phases/: LIANA_ANALYSIS.md  NOSTR_MAIL_ANALYSIS.md  PHASE10_AUDIT.md  PHASE10_DASHBOARD.md  PHASE10_RELEASE.md  PHASE10_WARNINGS.md  PHASE11_MULTISIG_HEIRS.md  PHASE11_TESTNET.md  PHASE_0.md  PHASE_1.md
fuzz/: Cargo.toml
fuzz/corpus/codex32_parse/: seed2.txt  seed3.txt
fuzz/corpus/mnemonic_parse/: seed2.txt  seed3.txt
fuzz/fuzz_targets/: codex32_parse.rs  encrypted_seed_parse.rs  mnemonic_parse.rs
scripts/: create-dmg.sh
tauri-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
tauri-app/frontend/: index.html
tauri-app/frontend/js/: app.js
tauri-app/frontend/styles/: main.css
tauri-app/src/: App.svelte  main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: ccd_commands.rs  commands.rs  db.rs  heir_commands.rs  main.rs  state.rs
tauri-app/src/components/: Card.svelte  CheckInProgress.svelte  CodeBlock.svelte  ConfirmDialog.svelte  CopyToast.svelte  DeliveryReport.svelte  HeirCard.svelte  InfoRow.svelte  Nav.svelte  QrCode.svelte  SectionHeader.svelte  StatusBadge.svelte
tauri-app/src/lib/: global.css  stores.ts  tauri.ts  theme.ts  validation.test.ts  validation.ts
tauri-app/src/screens/: CheckIn.svelte  Dashboard.svelte  Deliver.svelte  Heirs.svelte  Onboarding.svelte  Settings.svelte  Setup.svelte  Unlock.svelte  Vault.svelte
tests/: e2e_integration.rs  e2e_testnet.rs
tests/e2e/: Cargo.toml  ccd_vault_demo.rs  live_integration.rs  security_tests.rs  testnet_cascade_demo.rs  testnet_checkin_broadcast.rs  testnet_heir_claim.rs
tests/e2e/src/: lib.rs
