[workspace]
resolver = "2"
members = [
    "crates/nostring-core",
    "crates/nostring-email",
    "crates/nostring-inherit",
    "crates/nostring-shamir",
    "tauri-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nostring/nostring"

[workspace.dependencies]
# Crypto
bip39 = "2.0"
bitcoin = "0.32"
secp256k1 = { version = "0.29", features = ["rand-std"] }
nostr-sdk = "0.35"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Miniscript (from Liana)
miniscript = { version = "12.0", features = ["compiler"] }

# Email
lettre = "0.11"
imap = "3.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri
tauri = "2.0"
