[workspace]
resolver = "2"
members = [
    "crates/nostring-core",
    "crates/nostring-email",
    "crates/nostring-electrum",
    "crates/nostring-inherit",
    "crates/nostring-shamir",
    "tauri-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nostring/nostring"

[workspace.dependencies]
# Crypto
bip39 = { version = "2.2", features = ["rand"] }
bitcoin = { version = "0.32", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }
nostr-sdk = "0.39"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Miniscript (from Liana)
miniscript = { version = "12.3", features = ["compiler"] }

# Email
lettre = "0.11"
imap = "3.0.0-alpha.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tauri
tauri = "2.9"
