[package]
name = "nostring-email"
description = "Encrypted email module for NoString (from nostr-mail)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nostring-core = { path = "../nostring-core" }
nostr-sdk.workspace = true
lettre.workspace = true
imap.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
