[package]
name = "nostring-inherit"
description = "Bitcoin timelock inheritance for NoString (from Liana)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nostring-core = { path = "../nostring-core" }
nostring-ccd = { path = "../nostring-ccd" }
bitcoin.workspace = true
miniscript.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64 = "0.22"

[dev-dependencies]
serde_json.workspace = true
bitcoinconsensus = "0.106"
