[package]
name = "nostring-notify"
description = "Check-in notification service for NoString"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
nostring-electrum = { path = "../nostring-electrum" }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }

# Nostr (with nip04 for encrypted DMs)
nostr-sdk = { workspace = true, features = ["nip04"] }

# Bitcoin (for network types)
bitcoin.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true

# Logging
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
