[package]
name = "nostring-notify"
description = "Check-in notification service for NoString"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
nostring-electrum = { path = "../nostring-electrum" }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }

# Nostr (with nip04 + nip44 for encrypted DMs and relay storage)
nostr-sdk = { workspace = true, features = ["nip04", "nip44"] }

# Bitcoin (for network types)
bitcoin.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true

# Random (for split ID generation)
rand.workspace = true

# Logging
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
