[package]
name = "nostring-server"
description = "NoString headless server daemon for 24/7 inheritance monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nostring-server"
path = "src/main.rs"

[dependencies]
nostring-core = { path = "../nostring-core" }
nostring-electrum = { path = "../nostring-electrum" }
nostring-inherit = { path = "../nostring-inherit" }
nostring-notify = { path = "../nostring-notify" }
nostring-watch = { path = "../nostring-watch" }

bitcoin.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true

toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.15"
