[package]
name = "nostring-app"
description = "NoString desktop application"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
nostring-core = { path = "../../crates/nostring-core" }
nostring-electrum = { path = "../../crates/nostring-electrum" }
nostring-email = { path = "../../crates/nostring-email" }
nostring-inherit = { path = "../../crates/nostring-inherit" }
nostring-notify = { path = "../../crates/nostring-notify" }
nostring-shamir = { path = "../../crates/nostring-shamir" }
tauri.workspace = true
rusqlite.workspace = true
bitcoin.workspace = true
nostr-sdk.workspace = true
miniscript.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
base64 = "0.22"
hex = "0.4"
log = "0.4"
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
