[package]
name = "nostring-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "e2e_integration"
path = "../e2e_integration.rs"

[[test]]
name = "security_tests"
path = "security_tests.rs"

[[test]]
name = "live_integration"
path = "live_integration.rs"

[[test]]
name = "testnet_checkin_broadcast"
path = "testnet_checkin_broadcast.rs"

[[test]]
name = "testnet_heir_claim"
path = "testnet_heir_claim.rs"

[[test]]
name = "testnet_cascade_demo"
path = "testnet_cascade_demo.rs"

[[test]]
name = "ccd_vault_demo"
path = "ccd_vault_demo.rs"

[dependencies]
nostring-ccd = { path = "../../crates/nostring-ccd" }
nostring-core = { path = "../../crates/nostring-core" }
nostring-inherit = { path = "../../crates/nostring-inherit" }
nostring-shamir = { path = "../../crates/nostring-shamir" }
nostring-electrum = { path = "../../crates/nostring-electrum" }
nostring-notify = { path = "../../crates/nostring-notify" }
nostring-watch = { path = "../../crates/nostring-watch" }
bitcoin = { version = "0.32", features = ["serde"] }
hex = "0.4"
miniscript = { version = "12.3", features = ["compiler"] }
nostr-sdk = { version = "0.44", features = ["nip04", "nip44"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }
serde_json = "1.0"
zeroize = "1.8"
rand = "0.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", features = ["json"] }
